# WesterosScript

./: CHEATSHEET.md  CONTROL_STRUCTURES_ANALYSIS.md  CONTROL_STRUCTURES_IMPLEMENTATION_MAP.md  CONTROL_STRUCTURES_QUICK_REF.md  README.md  WesterosScript-PRD.md  pyproject.toml  test_all_arithmetic.wss  test_arithmetic_fixed.wss  test_bare_block.wss  test_capitalize.py  test_comprehensive.wss  test_control_break.wss  test_control_continue.wss  test_control_for.wss  test_control_if.wss  test_control_while.wss  test_decl_div.wss  test_div_zero.wss  test_div_zero_error.wss  test_div_zero_runtime.wss  test_essence.wss  test_essence_coercion.wss  test_essence_sigil.wss  test_full_narration.wss  test_invalid_identifier.wss  test_lexical_error.wss  test_local_scope.wss  test_nested_scope.wss  test_offset_fix.wss  test_parser_narration.wss  test_runtime_div_zero.wss  test_runtime_div_zero2.wss  test_scope_simple.wss  test_scoping.wss  test_semantic_error.wss  test_symbol_table.wss  test_syntax.py  test_syntax_error.wss  test_tokens.wss  (+4 more)
examples/: for_loop.wss  normal.wss  scoping.wss  semantic_error_const_reassignment.wss  semantic_error_const_shadowing.wss  semantic_error_type_mismatch.wss  semantic_error_type_mismatch_assignment.wss  semantic_error_type_mismatch_declaration.wss  syntax_error_identifier_starts_with_digit.wss  syntax_error_missing_bang.wss  syntax_error_missing_delimiter.wss  valid.wss  valid_const_sigil.wss  valid_for_loop.wss  valid_if_else.wss  valid_scoping.wss  valid_while_loop.wss
src/westerosscript.egg-info/: PKG-INFO  (+3 more)
tests/: test_prd_scenarios.py
(+18 files in other folders)
