[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "westerosscript"
version = "0.1.0"
description = "WesterosScript compiler (lexer, parser, semantic analyzer) with Maester narration."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "WesterosScript" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
wss = "westerosscript.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
